# scritto-be-rust---unused-

./: Cargo.toml  Dockerfile  README.md  db_migrate_up_and_generate_entities.sh
db/: users.sql
entity/: Cargo.toml
entity/src/: enums.rs  lib.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230424_022824_create_users_table.rs
src/: error.rs  main.rs
src/config/: clients.rs
src/controllers/: auth.rs
src/model/: mod.rs
src/models/: users.rs
src/routes/: auth.rs  mod.rs
src/utils/: jwt.rs
