[package]
name = "scritto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
http = "0.2"
mysql = "*"
chrono = { version = "0.4.23", features = ["serde"] }
tracing-subscriber = "0.3.16"
tracing = "0.1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"