[package]
name = "scritto"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ ".", "entity", "migration" ]

[dependencies]
axum = "0.6.6"
http = "0.2"
mysql = "*"
chrono = { version = "0.4.23", features = ["serde"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.24", features = ["full"] }
serde = { version = "1", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
jsonwebtoken = "8.2.0"
dotenvy = "0.15.7"
entity = { path = "entity" }
migration = { path = "migration" }
sea-query = "0"
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros"]}